# WarpDrive

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.cursor/rules/: sdf.mdc
examples/geometry/: plot_circular_rlc.py
examples/sdf/: plot_sphere.py
tests/: __init__.py
tests/sdf/: test_box.py  test_box_frame.py  test_cylinder.py  test_intersection.py  test_marching_cubes.py  test_plotting.py  test_rotate.py  test_round_box.py  test_sphere.py  test_subtraction.py  test_translate.py  test_union.py  test_xor.py
warpdrive/: __init__.py
warpdrive/geometry/: __init__.py  geometry.py
warpdrive/geometry/circuit/: __init__.py  circular_rlc.py
warpdrive/material/: material.py
warpdrive/sdf/: __init__.py  box.py  box_frame.py  cylinder.py  difference.py  intersection.py  marching_cubes.py  plotting.py  rotate.py  round_box.py  sphere.py  subtraction.py  symbols.py  translate.py  union.py  xor.py
warpdrive/utils/: package_management.py
