[build-system]
requires = ["setuptools >=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warpdrive"
version = "0.1.0"
description = "WarpDrive - modern Python project skeleton."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "you@example.com"}
]
dependencies = ["sympy>=1.12"]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "flake8",
  "mypy",
  "pre-commit",
  "bandit",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"] 